--- a/Santander Product Recommendation.ipynb
+++ b/Santander Product Recommendation.ipynb
@@ -3509,6 +3509,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 7. Sexo and segmento:\n",
+    "\n",
+    "There are other variables that contain missing values .. however, let's focus on those two variables cause they might have significant effect on the depend variable .. \n",
+    "\n",
+    "    sexo \tCustomer's sex\n",
+    "    segmento \tsegmentation: \n",
+    "                01 - VIP\n",
+    "                02 - Individuals \n",
+    "                03 - college graduated\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 421,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.0, 'H', 'V'], dtype=object)"
+      ]
+     },
+     "execution_count": 421,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.sexo.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the value of 1 might indicate typo ! as the sex either H or V .. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1\n",
+       "63       1\n",
+       "62       1\n",
+       "61       1\n",
+       "60       1\n",
+       "59       1\n",
+       "58       1\n",
+       "57       1\n",
+       "56       1\n",
+       "64       1\n",
+       "55       1\n",
+       "53       1\n",
+       "52       1\n",
+       "51       1\n",
+       "50       1\n",
+       "49       1\n",
+       "48       1\n",
+       "47       1\n",
+       "46       1\n",
+       "54       1\n",
+       "65       1\n",
+       "66       1\n",
+       "67       1\n",
+       "87       1\n",
+       "86       1\n",
+       "85       1\n",
+       "84       1\n",
+       "83       1\n",
+       "82       1\n",
+       "81       1\n",
+       "        ..\n",
+       "12435    V\n",
+       "12433    V\n",
+       "12431    V\n",
+       "12430    H\n",
+       "12429    H\n",
+       "12424    V\n",
+       "3854     H\n",
+       "12421    V\n",
+       "12420    V\n",
+       "12419    H\n",
+       "12418    H\n",
+       "12414    H\n",
+       "3859     H\n",
+       "12410    H\n",
+       "12409    V\n",
+       "12408    V\n",
+       "3861     V\n",
+       "12405    V\n",
+       "3864     V\n",
+       "3865     V\n",
+       "12399    V\n",
+       "12398    V\n",
+       "3868     V\n",
+       "12395    V\n",
+       "12394    H\n",
+       "12393    V\n",
+       "12392    H\n",
+       "12391    V\n",
+       "12438    H\n",
+       "18675    V\n",
+       "Name: sexo, dtype: object"
+      ]
+     },
+     "execution_count": 422,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.sexo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.0, '02 - PARTICULARES', '01 - TOP', '03 - UNIVERSITARIO', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 424,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.segmento.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NAs are also there besides the value of 1 !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Let's explore the whole variables at the same time .. \n",
     "    \n",
     "instead of working on each seperately !"
@@ -10240,6 +10390,271 @@
    ],
    "source": [
     "ntrain.ind_nomina_ult1.isnull().any().any(), ntrain.ind_nom_pens_ult1.isnull().any().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 433,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0    V\n",
+       " dtype: object, 0    03 - UNIVERSITARIO\n",
+       " dtype: object)"
+      ]
+     },
+     "execution_count": 433,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.sexo.mode(), ntrain.segmento.mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's replace the values of sex and segmention by the mode .. as these are categorical variables .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 437,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ntrain.loc[ntrain.segmento.isnull(), \"segmento\"] =  ntrain.segmento.mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 438,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 438,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.segmento.isnull().any().any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NAs are still there !! :S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                         1\n",
+       "63                        1\n",
+       "62                        1\n",
+       "61                        1\n",
+       "60                        1\n",
+       "59                        1\n",
+       "58                        1\n",
+       "57                        1\n",
+       "56                        1\n",
+       "64                        1\n",
+       "55                        1\n",
+       "53                        1\n",
+       "52                        1\n",
+       "51                        1\n",
+       "50                        1\n",
+       "49                        1\n",
+       "48                        1\n",
+       "47                        1\n",
+       "46                        1\n",
+       "54                        1\n",
+       "65                        1\n",
+       "66                        1\n",
+       "67                        1\n",
+       "87                        1\n",
+       "86                        1\n",
+       "85                        1\n",
+       "84                        1\n",
+       "83                        1\n",
+       "82                        1\n",
+       "81                        1\n",
+       "                ...        \n",
+       "12435    03 - UNIVERSITARIO\n",
+       "12433    03 - UNIVERSITARIO\n",
+       "12431     02 - PARTICULARES\n",
+       "12430     02 - PARTICULARES\n",
+       "12429    03 - UNIVERSITARIO\n",
+       "12424    03 - UNIVERSITARIO\n",
+       "3854      02 - PARTICULARES\n",
+       "12421    03 - UNIVERSITARIO\n",
+       "12420    03 - UNIVERSITARIO\n",
+       "12419    03 - UNIVERSITARIO\n",
+       "12418    03 - UNIVERSITARIO\n",
+       "12414     02 - PARTICULARES\n",
+       "3859     03 - UNIVERSITARIO\n",
+       "12410    03 - UNIVERSITARIO\n",
+       "12409    03 - UNIVERSITARIO\n",
+       "12408     02 - PARTICULARES\n",
+       "3861      02 - PARTICULARES\n",
+       "12405     02 - PARTICULARES\n",
+       "3864     03 - UNIVERSITARIO\n",
+       "3865      02 - PARTICULARES\n",
+       "12399     02 - PARTICULARES\n",
+       "12398    03 - UNIVERSITARIO\n",
+       "3868     03 - UNIVERSITARIO\n",
+       "12395    03 - UNIVERSITARIO\n",
+       "12394    03 - UNIVERSITARIO\n",
+       "12393    03 - UNIVERSITARIO\n",
+       "12392    03 - UNIVERSITARIO\n",
+       "12391    03 - UNIVERSITARIO\n",
+       "12438    03 - UNIVERSITARIO\n",
+       "18675              01 - TOP\n",
+       "Name: segmento, dtype: object"
+      ]
+     },
+     "execution_count": 439,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.segmento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other variables:\n",
+    "indfall  ==>  Deceased index. N/S\n",
+    "\n",
+    "tiprel_1mes  ==>   Customer relation type at the beginning of the month, A (active), I (inactive), P (former customer),R (Potential)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.0, 'N', 'S'], dtype=object)"
+      ]
+     },
+     "execution_count": 440,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.indfall.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    N\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 441,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.indfall.mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ntrain.loc[ntrain.indfall.isnull(),\"indfall\"] = \"N\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 443,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.0, 'N', 'S'], dtype=object)"
+      ]
+     },
+     "execution_count": 443,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.indfall.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cuase 1 is not treated as NA .. but it still incorrect value !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ntrain.tiprel_1mes.unique(), ntrain.tiprel_1mes.mode()\n",
+    "ntrain.loc[ntrain.tiprel_1mes.isnull(),\"tiprel_1mes\"] = \"I\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 447,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 447,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ntrain.tiprel_1mes.isnull().any().any()"
    ]
   },
   {
